--- a/house/style.css
+++ b/house/style.css
@@ -70,3 +70,23 @@
         390px -300px 0 0px #FFFFFF,
         -410px -280px 0 0px #FFFFFF,
         410px -280px 0 0px #FFFFFF,
+        0px -10px 0 0px #E34234,
+        0px -20px 0 0px #E96B39,
+        0px -30px 0 0px #E34234,
+        0px -40px 0 0px #E96B39,
+        0px -50px 0 0px #E34234,
+        0px -60px 0 0px #E96B39,
+        0px -70px 0 0px #E34234,
+        0px -80px 0 0px #E96B39,
+        0px -90px 0 0px #E34234,
+        0px -100px 0 0px #E96B39,
+        0px -110px 0 0px #E34234,
+        0px -120px 0 0px #E96B39,
+        0px -130px 0 0px #E34234,
+        0px -140px 0 0px #E96B39,
+        0px -150px 0 0px #E34234,
+        0px -160px 0 0px #E96B39,
+        0px -170px 0 0px #E34234,
+        0px -180px 0 0px #E96B39,
+        0px -190px 0 0px #E34234
+}
