--- a/rose/style.css
+++ b/rose/style.css
@@ -10,3 +10,32 @@
     box-shadow: 
         0 -350px 0 50px red;    
 }
+
+.rose::after{
+    content: '';
+    width: 10px;
+    height: 5px;
+    position: absolute;
+    background: #096809;
+    border-radius: 5px;
+    top: 5px;
+    right: 0px;
+    box-shadow: 
+        2px 30px 0 #096809,
+        5px 50px 0 #096809,
+        2px 100px 0 #096809,
+        2px 180px 0 #096809,
+        1px 230px 0 #096809,
+        -10px -100px 0 26px #FC0300,
+        -2px -100px 0 29px #801818,
+        -2px -100px 0 32px #FC0300,
+        -2px -100px 0 33px #801818,
+        -2px -100px 0 35px #FC0300,
+        -2px -100px 0 38px #801818,
+        -2px -100px 0 41px #FC0300,
+        -2px -100px 0 44px #801818,
+        -2px -100px 0 46px #FC0300,
+        -2px -100px 0 48px #801818,
+        -2px -100px 0 51px #FC0300,
+        0 -150px 0 70px white;
+}
