--- a/form/style/style.css
+++ b/form/style/style.css
@@ -1,18 +1,23 @@
 body{
-    background: #141414;
-    margin: 0;
-    font-family: sans-serif;
+    
+    margin: 0 auto;
+    font-family: arial;
+    width: 800px;
+}
+
+.content{
+    background: #131313;
 }
 
 header{
-    background: #0d0d0d;
+    background: #131313;
     padding: 20px;
     text-align: center
 }
 
 form{
     margin: 20px;
-    color: #eee;
+    color: #fff;
 }
 
 form p{
@@ -20,4 +25,54 @@ form p{
     letter-spacing: 0.1em;
 }
 
+input[type="text"]{
+    margin: 5px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 0;
+    
+}
 
+input[type="radio"]{
+    opacity: 0;
+    width: 0;
+    margin: 0;
+}
+
+label[for="male"], label[for="female"]{
+    margin-bottom: 10px;
+    display: inline-block;
+    padding-left: 30px;
+    background: url(img/checks.png) no-repeat;
+    background-position: 0 -32px;
+    line-height: 20px;
+    cursor: pointer;
+}
+
+input:checked + label[for="male"],input:checked + label[for="female"]{
+    background-position: 0 0;
+    color: #800000;
+    
+}
+
+input[type="checkbox"]{
+    opacity: 0;
+    width: 0;
+    margin: 0;
+}
+
+label[for="front"], label[for="back"], label[for="full"]{
+    margin-bottom: 10px;
+    display: inline-block;
+    padding-left: 30px;
+    background: url(img/checks.png) no-repeat;
+    background-position: 0 -98px;
+    line-height: 20px;
+    cursor: pointer;
+}
+
+input:checked + label[for="front"],input:checked + label[for="back"], input:checked + label[for="full"]{
+    background-position: 0 -65px;
+    color: #ce1010;
+    
+}
