--- a/form/style/style.css
+++ b/form/style/style.css
@@ -43,7 +43,7 @@ label[for="male"], label[for="female"]{
     margin-bottom: 10px;
     display: inline-block;
     padding-left: 30px;
-    background: url(img/checks.png) no-repeat;
+    background: url(../img/checks.png) no-repeat;
     background-position: 0 -32px;
     line-height: 20px;
     cursor: pointer;
@@ -65,7 +65,7 @@ label[for="front"], label[for="back"], label[for="full"]{
     margin-bottom: 10px;
     display: inline-block;
     padding-left: 30px;
-    background: url(img/checks.png) no-repeat;
+    background: url(../img/checks.png) no-repeat;
     background-position: 0 -98px;
     line-height: 20px;
     cursor: pointer;
@@ -112,7 +112,7 @@ select{
     display: block;
     margin: 30px 0;
     padding: 10px 50px 10px 10px;
-    background: url(img/select.png) no-repeat 95% center;
+    background: url(../img/select.png) no-repeat 95% center;
     background-color: #222;
     color: #fff;
     border-radius: 5px;
