--- a/mosaic_layout/style.css
+++ b/mosaic_layout/style.css
@@ -28,3 +28,33 @@ h1{
     padding: 40px;
     
 }
+
+.one{
+            background: url(img/seven.jpeg) no-repeat center;
+            grid-column: 1 / 3;
+            grid-row: 1 / 5;
+        }
+
+.two{
+            background: url(img/two.jpeg) no-repeat center;
+            grid-column: 3 / 7;
+            grid-row: 1 / 3;
+        }
+
+.three{
+            background: url(img/eight.jpeg) no-repeat center;
+            grid-column: 3 / 5;
+            grid-row:  3 / 5;
+        }
+
+.four{
+            background: url(img/five.jpeg) no-repeat center ;
+            grid-column: 5 / 7;
+            grid-row: 3 / 7;
+        }
+
+.five{
+            background: url(img/three.jpeg) no-repeat center;
+            grid-column: 1 / 5;
+            grid-row: 5 / 7;
+        }
