--- a/mosaic_layout/style.css
+++ b/mosaic_layout/style.css
@@ -33,28 +33,74 @@ h1{
             background: url(img/seven.jpeg) no-repeat center;
             grid-column: 1 / 3;
             grid-row: 1 / 5;
-        }
+}
 
 .two{
             background: url(img/two.jpeg) no-repeat center;
             grid-column: 3 / 7;
             grid-row: 1 / 3;
-        }
+}
 
 .three{
             background: url(img/eight.jpeg) no-repeat center;
             grid-column: 3 / 5;
             grid-row:  3 / 5;
-        }
+}
 
 .four{
             background: url(img/five.jpeg) no-repeat center ;
             grid-column: 5 / 7;
             grid-row: 3 / 7;
-        }
+}
 
 .five{
             background: url(img/three.jpeg) no-repeat center;
             grid-column: 1 / 5;
             grid-row: 5 / 7;
-        }
+}
+
+@media screen and (max-width: 760px){    
+
+h1{
+    transform:none;
+    text-align: center;
+    position: relative;
+    right: auto;
+    top: auto;
+    }
+    
+    
+#content{
+    transform: none;
+}
+    
+.one{
+            background: url(img/seven.jpeg) no-repeat center;
+            grid-column: 1 / 7;
+            grid-row: 1;
+}
+
+.two{
+            background: url(img/two.jpeg) no-repeat center;
+            grid-column: 1 / 7;
+            grid-row: 2;
+}
+
+.three{
+            background: url(img/eight.jpeg) no-repeat center;
+            grid-column: 1 / 7;
+            grid-row:  3;
+}
+
+.four{
+            background: url(img/five.jpeg) no-repeat center ;
+            grid-column: 1 / 7;
+            grid-row: 4;
+}
+
+.five{
+            background: url(img/three.jpeg) no-repeat center;
+            grid-column: 1 / 7;
+            grid-row: 5;
+}
+}
