--- a/slider/style.css
+++ b/slider/style.css
@@ -1,1 +1,26 @@
+body{
+    margin: 0px;
+    padding: 0px;
+}
 
+#mainbox{
+    width: 65.3%;
+    height: 68.2%;
+    position: absolute;
+    overflow: hidden;
+    top: 2%;
+    left: 17.9%;
+}
+
+#imgbox{
+    width: 300%;
+    position: relative;
+    left: 0;
+    animation: slidemove 30s infinite;
+}
+
+#imgbox img{
+    height: 100%;
+    width: 33.33%;
+    float: left;
+}
