--- a/slider/style.css
+++ b/slider/style.css
@@ -24,3 +24,37 @@ body{
     width: 33.33%;
     float: left;
 }
+
+@-webkit-keyframes slidemove {
+    0%{
+        left: 0;
+    }
+    25%{
+        left: -100%;
+    }
+    50%{
+        left: -200%;
+    }
+    75%{
+        left: -100%;
+    }
+    100%{
+        left: 0;
+    }
+}
+
+#container{
+    background:url('tv.jpg');
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#blackLayer{
+    height: 100%;
+    width: 100%;
+    background-color: #2b2a30;
+    position: absolute;
+    opacity: .2;
+    z-index: 99;
