--- a/menu/style.css
+++ b/menu/style.css
@@ -1,1 +1,41 @@
-...
+body{
+    margin: 0px;
+    padding: 0px;
+}
+
+ul li img {
+    width: 55px;
+    height: 55px;
+}
+
+ul {
+    width: 600px;
+    list-style: none;
+    font-family: Arial;
+    font-size: 15px;
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+ul li{
+    width: 100px;
+    display: inline-block;
+    margin-left: 3px;
+    margin-right: 3px;
+    padding: 10px 0 10px 0;
+    text-align: center;
+}
+
+ul li:hover{
+    cursor: pointer;
+}
+
+#line{
+    height: 2px;
+    width: 100px;
+    margin-left: 223px;
+    background-color: black;
+    transition: all .3s linear;
+}
