--- a/animation/style.css
+++ b/animation/style.css
@@ -1,1 +1,21 @@
-...
+body{
+    margin: 0px;
+    padding: 0px;
+    background-color: #323232;
+}
+
+#main{
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    overflow: hidden;
+}
+
+#objectOne{
+    position: absolute;
+    top: 200px;
+    left: 700px;
+    opacity: 0.5;
+    -webkit-filter: blur(4px);
+    transform: rotate(20deg);
+}
