--- a/animation/style.css
+++ b/animation/style.css
@@ -34,3 +34,39 @@ body{
     -webkit-filter: blur(3px);
     transform: rotate(-20deg);
 }
+
+#objectOne img{
+    width: 150px;
+    height: 250px;
+}
+
+#objectThree img{
+    width: 350px;
+    height: 600px;
+}
+
+#layer{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+}
+
+#text{
+    font-family: Arial;
+    font-size: 60px;
+    color: #fafafa;
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    transform: translate(-50%,-50%);
+    line-height: 60px;
+    border-left: 2px solid #fafafa;
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
+#full{
+    font-size: 30px;
+}
