--- a/style.css
+++ b/style.css
@@ -1,1 +1,28 @@
-...
+.card{
+    width: 250px;
+    height: 250px;
+}
+
+.title-text{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.container-card{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.single-card{
+    padding: 1em;
+}
+
+.button-card{
+    display: flex;
+}
+
+.button-card p{
+    padding-right: 1em;
+}
